// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dep.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */

export function f(x: string): void {}

=====================================output=====================================
/* @flow */

export function f(x: string): void {}

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */

import {f} from "./dep";

// $FlowFixMe
f(0);

=====================================output=====================================
/* @flow */

import { f } from "./dep";

// $FlowFixMe
f(0);

================================================================================
`;
